--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body {
     /* position: absolute; */
     font-family: 'Cursive', sans-serif;
     font-size: 5em;
-    color: rgb(69, 45, 11);
+    color: rgb(246 158 158);
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6); /*3D effect */
     text-align: center;
     font-weight: bold;
